background image change

--- a/templates/home.html
+++ b/templates/home.html
@@ -75,7 +75,9 @@
 <!--        {% endfor %}-->
 <!--    </div>-->
 <!--    {% endif %}-->
-    <div class="footer" style="">Developed By Manish </div>
+    <div class="footer" style=""> <span style="color: #fffdfd;
+    font-size: larger;
+    font-weight: 600;background-color:#ce0606;"> Developed By Manish Bolbanda</span>  </div>
   <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@7.2.0/dist/js/autoComplete.min.js"></script>
   <script type="text/javascript" src="{{url_for('static', filename='autocomplete.js')}}"></script>
 
